# vsr-api-agents

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  RUNBOOK.md  TESTING_GUIDE.md  WEBHOOK_TESTING_GUIDE.md  docker-compose.prod.yml  local_dev_readme.md
.github/workflows/: ci.yml  deploy.yml
PRD/: vsr_prd.md
api/: pyproject.toml
api/tests/: test_endpoints.py
api/vsr_api/: __init__.py  config.py  main.py
api/vsr_api/docs/: openapi_config.py
api/vsr_api/middleware/: __init__.py  auth.py  metrics.py  quotas.py  rate_limit.py  security.py
api/vsr_api/routes/: __init__.py  health.py  jobs.py  metrics.py  submit.py  uploads.py
api/vsr_api/tests/: test_observability.py
api/vsr_api/validation/: __init__.py  validators.py
deployment/: config.staging.yml  config.yml
docs/: spaces_lifecycle_policies.md
infra/: __init__.py  api.Dockerfile  docker-compose.local.yml  docker-compose.minimal.yml  docker-compose.prod.yml  worker.Dockerfile
infra/digitalocean/: __init__.py  provision.py
infrastructure/spaces/: setup_spaces.py
infrastructure/ssl/: setup_ssl.py
monitoring/health/: health_checker.py
monitoring/prometheus/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: vsr-api.conf
scripts/: cleanup-storage.py  deploy.py  health_check.py  monitoring-alerts.py  requirements.txt  seed_db.py  setup_minio.py  smoke_tests.py  validate_gpu.py  webhook-server.py
shared/: pyproject.toml
shared/vsr_shared/: __init__.py  logging.py  models.py  multipart.py  presigned.py  spaces.py  spaces_keys.py  webhooks.py
shared/vsr_shared/db/: __init__.py  client.py  collections.py  dal.py  setup.py
shared/vsr_shared/queue/: __init__.py  client.py  consumer.py  integration.py  publisher.py  topology.py
shared/vsr_shared/tests/: test_queue.py  test_queue_integration.py  test_spaces.py  test_webhooks.py
shared/vsr_shared/utils/: __init__.py  api_keys.py
worker/: pyproject.toml  start_worker.py  validate_dual_mode.py
worker/tests/: test_dual_mode.py
worker/vsr_worker/: __init__.py  config.py  cpu_worker.py  dual_mode_consumer.py  main.py  metrics.py  mock.py  mock_worker.py  queue_handler.py  webhooks.py
worker/vsr_worker/config/: dual_mode.py
worker/vsr_worker/gpu/: __init__.py  environment.py  model_loader.py
worker/vsr_worker/io/: video_io.py
worker/vsr_worker/models/: __init__.py  adaptive.py  cpu_optimized.py  lama.py  propainter.py  sttn.py
worker/vsr_worker/notifications/: webhook.py
worker/vsr_worker/processing/: pipeline.py
worker/vsr_worker/queue/: consumer.py  simple_consumer.py
