[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsr-api"
version = "0.1.0"
description = "Video Subtitle Removal API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.30.*",
    "pydantic==2.8.*",
    "pydantic-settings==2.3.*",
    "httpx==0.27.*",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "orjson==3.10.*",
    "prometheus-client==0.20.*",
    "tenacity==9.0.*",
    "boto3==1.34.*",
    "botocore==1.34.*",
    "pymongo==4.9.*",
    "motor==3.6.*",
    "pika==1.3.*",
    "structlog==24.1.*",
    "vsr-shared",
]

[project.optional-dependencies]
dev = [
    "black==24.*",
    "ruff==0.5.*",
    "isort==5.*",
    "mypy==1.10.*",
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==4.*",
    "testcontainers==4.7.*",
]

[tool.setuptools]
packages = ["vsr_api"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP"]
