[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsr-shared"
version = "0.1.0"
description = "Shared models and utilities for VSR API"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.8.*",
    "aio-pika==9.4.*",
    "motor==3.6.*",
    "pymongo==4.9.*",
    "boto3==1.34.*",
    "httpx==0.27.*",
    "tenacity==9.0.*",
    "structlog==24.1.*",
]

[project.optional-dependencies]
dev = [
    "black==24.*",
    "ruff==0.5.*",
    "isort==5.*",
    "mypy==1.10.*",
]
test = [
    "pytest==8.2.*",
    "pytest-asyncio==0.23.*",
    "respx==0.21.*",
    "pytest-mock==3.14.*",
]

[tool.setuptools]
packages = ["vsr_shared"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A"]
ignore = ["ANN101", "ANN102"]  # Skip type annotations for self and cls
