[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vsr-worker"
version = "0.1.0"
description = "Video Subtitle Removal Worker"
requires-python = ">=3.11"
dependencies = [
    "torch==2.4.*",
    "torchvision==0.19.*",
    "xformers==0.0.27.post2",
    "opencv-python-headless==4.10.*",
    "numba==0.59.*",
    "numpy>=1.22,<1.27",
    "scikit-image==0.24.*",
    "onnxruntime-gpu==1.18.*",
    "boto3==1.34.*",
    "botocore==1.34.*",
    "pika==1.3.*",
    "pymongo==4.9.*",
    "motor==3.6.*",
    "python-dotenv==1.0.1",
    "structlog==24.1.*",
    "pydantic-settings==2.0.*",
    "vsr-shared",
]

[project.optional-dependencies]
dev = [
    "black==24.*",
    "ruff==0.5.*",
    "isort==5.*",
    "mypy==1.10.*",
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==4.*",
]

[tool.setuptools]
packages = ["vsr_worker"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP"]
